WIP: getting closer

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -32,7 +32,7 @@ poll_interval = 5
 # gathering = explicit
 
 # Try out mitogen
-strategy_plugins = Users/malcolm/.pyenv/versions/ansible25/lib/python2.7/site-packages/ansible_mitogen/plugins/strategy
+strategy_plugins = /Users/malcolm/.pyenv/versions/ansible25/lib/python2.7/site-packages/ansible_mitogen/plugins/strategy
 # strategy = mitogen_linear
 
 [ssh_connection]
