wip: updated requirements

--- a/galaxy/requirements.yml
+++ b/galaxy/requirements.yml
@@ -5,6 +5,7 @@
 - src: https://github.com/bossjones/boss-ansible-role-core
 - src: https://github.com/bossjones/boss-ansible-role-debug
 - src: https://github.com/bossjones/boss-ansible-role-docker
+- src: https://github.com/bossjones/boss-ansible-role-rsyslogd
 - src: https://github.com/bossjones/boss-ansible-role-environment
 - src: https://github.com/bossjones/boss-ansible-role-etckeeper
 - src: https://github.com/bossjones/boss-ansible-role-fact
