--- a/galaxy/requirements.yml
+++ b/galaxy/requirements.yml
@@ -3,6 +3,22 @@
 - src: https://github.com/bossjones/ansible-goss-install
 - src: https://github.com/bossjones/boss-ansible-role-bootstrap
 - src: https://github.com/bossjones/boss-ansible-role-core
+- src: https://github.com/bossjones/boss-ansible-role-graphite
+- src: https://github.com/bossjones/boss-ansible-role-nfs
+- src: https://github.com/bossjones/boss-ansible-role-ansible-workstation
+- src: https://github.com/bossjones/boss-ansible-role-wireshark
+- src: https://github.com/bossjones/boss-ansible-role-sysctl
+- src: https://github.com/bossjones/boss-ansible-role-dnsmasq
+- src: https://github.com/bossjones/boss-ansible-role-dhcpd
+- src: https://github.com/bossjones/boss-ansible-role-dhclient
+- src: https://github.com/bossjones/boss-ansible-role-locales
+- src: https://github.com/bossjones/boss-ansible-role-secret
+- src: https://github.com/bossjones/boss-ansible-role-pki
+- src: https://github.com/bossjones/boss-ansible-role-apt_install
+- src: https://github.com/bossjones/boss-ansible-role-apt
+- src: https://github.com/bossjones/boss-ansible-role-java
+- src: https://github.com/bossjones/boss-ansible-role-maven
+- src: https://github.com/bossjones/boss-ansible-role-users
 - src: https://github.com/bossjones/boss-ansible-role-debug
 - src: https://github.com/bossjones/boss-ansible-role-docker
 - src: https://github.com/bossjones/boss-ansible-role-rsyslogd
