wip: vagrant setup

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,61 +1,83 @@
 
-rsyslogd-master-01 ansible_ssh_host=rsyslogd-master-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.50.108 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r' boss__kubernetes__kubeadm__server_type=master is_master=true
+bosslab-master-01.hyenalab.home ansible_ssh_host=bosslab-master-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.20.101 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r' boss__kubernetes__kubeadm__server_type=master is_master=true
 
-rsyslogd-worker-01 ansible_ssh_host=rsyslogd-worker-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.50.109 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r'
+bosslab-worker-01.hyenalab.home ansible_ssh_host=bosslab-worker-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.20.102 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r'
+
+bosslab-worker-02.hyenalab.home ansible_ssh_host=bosslab-worker-02 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.20.103 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r'
+
+bosslab-proxy-01.hyenalab.home ansible_ssh_host=bosslab-proxy-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.20.104 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r'
+
 
 [local]
 localhost ansible_connection=local
 
-[rsyslogd-master-01]
-rsyslogd-master-01
+[bosslab-master-01]
+bosslab-master-01.hyenalab.home
 
-[rsyslogd-worker-01]
-rsyslogd-worker-01
+[bosslab-worker-01]
+bosslab-worker-01.hyenalab.home
 
-[kubernetes-master]
-rsyslogd-master-01
+[bosslab-worker-02]
+bosslab-worker-02.hyenalab.home
 
-[kubernetes-master:vars]
-boss__kubernetes__kubeadm__server_type=master
-is_master=true
-
-[kubernetes-nodes]
-rsyslogd-worker-01
-
-[kubernetes-nodes:vars]
-boss__kubernetes__kubeadm__server_type=node
-is_master=false
-
-[kubernetes:children]
-kubernetes-master
-kubernetes-nodes
-
-[all:children]
-kubernetes
-
-[servers:children]
-kubernetes-master
-kubernetes-nodes
-
-# Use FullyQualifiedDomainNames (FQDN) (e.g. machine1.corp.example.com)
-[primary-master:children]
-kubernetes-master
+[bosslab-proxy-01]
+bosslab-proxy-01.hyenalab.home
 
 [masters:children]
-primary-master
+bosslab-master-01.hyenalab.home
 
-[primary-etcd:children]
-primary-master
+[workers:children]
+bosslab-worker-0[1:2].hyenalab.home
 
-[nodes:children]
-# If there is only one machine both master and node, make this section empty
-rsyslogd-worker-01
+[proxy:children]
+bosslab-proxy-01.hyenalab.home
 
-[node:children]
-nodes
+[servers:children]
+masters
+workers
+proxy
 
-[netdata_registry:children]
-kubernetes-master
+# [kubernetes-master:vars]
+# boss__kubernetes__kubeadm__server_type=master
+# is_master=true
+#
+# [kubernetes-nodes]
+# rsyslogd-worker-01
+#
+# [kubernetes-nodes:vars]
+# boss__kubernetes__kubeadm__server_type=node
+# is_master=false
+#
+# [kubernetes:children]
+# kubernetes-master
+# kubernetes-nodes
 
-[netdata_nodes:children]
-kubernetes-nodes
+[all:children]
+servers
+
+# [servers:children]
+# kubernetes-master
+# kubernetes-nodes
+#
+# # Use FullyQualifiedDomainNames (FQDN) (e.g. machine1.corp.example.com)
+# [primary-master:children]
+# kubernetes-master
+#
+# [masters:children]
+# primary-master
+#
+# [primary-etcd:children]
+# primary-master
+#
+# [nodes:children]
+# # If there is only one machine both master and node, make this section empty
+# rsyslogd-worker-01
+#
+# [node:children]
+# nodes
+#
+# [netdata_registry:children]
+# kubernetes-master
+#
+# [netdata_nodes:children]
+# kubernetes-nodes
