--- a/inventory.ini
+++ b/inventory.ini
@@ -23,14 +23,17 @@ bosslab-worker-02.hyenalab.home
 [bosslab-proxy-01]
 bosslab-proxy-01.hyenalab.home
 
+# CHILDREN
+
 [masters:children]
-bosslab-master-01.hyenalab.home
+bosslab-master-01
 
 [workers:children]
-bosslab-worker-0[1:2].hyenalab.home
+bosslab-worker-01
+bosslab-worker-02
 
 [proxy:children]
-bosslab-proxy-01.hyenalab.home
+bosslab-proxy-01
 
 [servers:children]
 masters
