--- a/inventory.ini
+++ b/inventory.ini
@@ -7,7 +7,6 @@ bosslab-worker-02.hyenalab.home ansible_ssh_host=bosslab-worker-02 ansible_ssh_p
 
 bosslab-proxy-01.hyenalab.home ansible_ssh_host=bosslab-proxy-01 ansible_ssh_private_key_file=~/.ssh/vagrant_id_rsa ip=192.168.20.104 ansible_ssh_port=22 ansible_ssh_user='vagrant' ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/ansible-ssh-%h-%p-%r'
 
-
 [local]
 localhost ansible_connection=local
 
@@ -40,6 +39,17 @@ masters
 workers
 proxy
 
+[all:children]
+servers
+
+[rsyslogd_masters:children]
+bosslab-worker-02
+
+[rsyslogd_clients:children]
+bosslab-master-01
+bosslab-worker-01
+bosslab-proxy-01
+
 # [kubernetes-master:vars]
 # boss__kubernetes__kubeadm__server_type=master
 # is_master=true
@@ -54,9 +64,6 @@ proxy
 # [kubernetes:children]
 # kubernetes-master
 # kubernetes-nodes
-
-[all:children]
-servers
 
 # [servers:children]
 # kubernetes-master
