wip: update reqs

--- a/inventory.ini
+++ b/inventory.ini
@@ -50,6 +50,28 @@ bosslab-master-01
 bosslab-worker-01
 bosslab-proxy-01
 
+# NOTE: Normally we'll split this off to a dedicated server somewhere, but for the purpose of vagrant, we'll have one of the servers run 2 different "roles"
+# [graphite-master1]
+# graphite-master1
+
+[graphite-master1:children]
+bosslab-worker-01
+
+# groups of groups = children
+[graphite-master-servers:children]
+graphite-master1
+
+[netdata_registry:children]
+masters
+
+[netdata_nodes:children]
+bosslab-worker-01
+bosslab-worker-02
+bosslab-proxy-01
+
+[graphite_master:children]
+graphite-master1
+
 # [kubernetes-master:vars]
 # boss__kubernetes__kubeadm__server_type=master
 # is_master=true
