--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+ansible-inventory-grapher==2.4.5
 ansible-lint==4.0.0
+ansible-playbook-grapher==0.7.3
 ansible==2.5.14
 ansigenome==0.6.0
 appdirs==1.4.3            # via openstacksdk
@@ -21,6 +23,7 @@ certifi==2018.11.29       # via requests
 cffi==1.11.5              # via bcrypt, cryptography, pynacl
 chardet==3.0.4            # via requests
 colorama==0.3.9           # via awscli
+colour==0.1.5             # via ansible-playbook-grapher
 configparser==3.5.0       # via pylint
 cryptography==2.4.2       # via ansible, openstacksdk, paramiko
 decorator==4.3.0          # via openstacksdk
@@ -28,6 +31,7 @@ docutils==0.14            # via awscli, botocore
 dogpile.cache==0.6.8      # via openstacksdk
 enum34==1.1.6             # via astroid, cryptography
 futures==3.2.0            # via isort, openstacksdk, s3transfer
+graphviz==0.8.1           # via ansible-playbook-grapher
 idna==2.8                 # via cryptography, requests
 ipaddress==1.0.22         # via cryptography, openstacksdk
 iso8601==0.1.12           # via keystoneauth1, openstacksdk
@@ -39,12 +43,13 @@ jsonpatch==1.23           # via openstacksdk
 jsonpointer==2.0          # via jsonpatch
 keystoneauth1==3.11.2     # via openstacksdk
 lazy-object-proxy==1.3.1  # via astroid
+lxml==4.1.1               # via ansible-playbook-grapher
 markupsafe==1.1.0         # via jinja2
 mccabe==0.6.1             # via pylint
 mitogen==0.2.3
 munch==2.3.2              # via openstacksdk
 netaddr==0.7.19
-netifaces==0.10.7         # via openstacksdk
+netifaces==0.10.8         # via openstacksdk
 openstacksdk==0.22.0      # via os-client-config, shade
 os-client-config==1.31.2  # via shade
 os-service-types==1.4.0   # via keystoneauth1, openstacksdk
