--- a/inventory.ini
+++ b/inventory.ini
@@ -50,9 +50,20 @@ bosslab-master-01
 bosslab-worker-01
 bosslab-proxy-01
 
+[nfs_masters:children]
+bosslab-worker-02
+
+[nfs_clients:children]
+bosslab-master-01
+bosslab-worker-01
+bosslab-proxy-01
+
 # NOTE: Normally we'll split this off to a dedicated server somewhere, but for the purpose of vagrant, we'll have one of the servers run 2 different "roles"
 # [graphite-master1]
 # graphite-master1
+
+[influxdb:children]
+bosslab-worker-01
 
 [graphite-master1:children]
 bosslab-worker-01
